<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.8</version>
    <relativePath/> <!-- cherche artifact parent ds dépôts publics -->
  </parent>

  <groupId>com.CDA</groupId>
  <artifactId>powerme</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>PowerMeApp</name>
  <description>Application de réservation de bornes électriques entre particuliers</description>

  <properties>
    <java.version>21</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- Force Logback 1.5.19 to fix CVE-2025-11226 -->
    <logback.version>1.5.25</logback.version>

    <!-- SonarCloud config de base -->
    <sonar.organization>pololac</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <!-- Permet la décoration des PR -->
    <sonar.pullrequest.provider>github</sonar.pullrequest.provider>

    <!-- Chemins vers les fichiers compilés -->
    <sonar.java.binaries>target/classes</sonar.java.binaries>
    <sonar.java.test.binaries>target/test-classes</sonar.java.test.binaries>

    <!-- Rapport JaCoCo -->
    <sonar.coverage.jacoco.xmlReportPaths>
      target/site/jacoco/jacoco.xml
    </sonar.coverage.jacoco.xmlReportPaths>

  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Logging -->
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>${logback.version}</version>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-core</artifactId>
        <version>${logback.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-database-postgresql</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <scope>runtime</scope>
    </dependency>
    <!-- Hibernate Spatial (support PostGIS) -->
    <dependency>
      <groupId>org.hibernate.orm</groupId>
      <artifactId>hibernate-spatial</artifactId>
    </dependency>
    <!-- JTS (Java Topology Suite) pour manipuler les géométries -->
    <dependency>
      <groupId>org.locationtech.jts</groupId>
      <artifactId>jts-core</artifactId>
      <version>1.20.0</version>
    </dependency>
    <!-- JWT -->
    <dependency>
      <groupId>com.auth0</groupId>
      <artifactId>java-jwt</artifactId>
      <version>4.5.0</version>
    </dependency>
    <!-- Mail -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-mail</artifactId>
    </dependency>

    <!-- MapStruct -->
    <dependency>
      <groupId>org.mapstruct</groupId>
      <artifactId>mapstruct</artifactId>
      <version>1.6.3</version>
    </dependency>
    <!-- Annotation processor -->
    <dependency>
      <groupId>org.mapstruct</groupId>
      <artifactId>mapstruct-processor</artifactId>
      <version>1.6.3</version>
			<scope>provided</scope>
		</dependency>

    <!-- ==================== TESTS ==================== -->
    <dependency>
      <!-- Spring Boot Test: inclut JUnit, Mockito, AssertJ, Hamcrest...-->
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- Pour simuler user authentifié qd on utilise Spring Security -->
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- Testcontainers (Bdd compatible PostgreSQL & Postgis) -->
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>postgresql</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
      <!-- MapStruct plugin-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>21</source>
          <target>21</target>
          <annotationProcessorPaths>
            <path>
              <groupId>org.mapstruct</groupId>
              <artifactId>mapstruct-processor</artifactId>
              <version>1.5.5.Final</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <!-- Flyway -->
      <plugin>
        <groupId>org.flywaydb</groupId>
        <artifactId>flyway-maven-plugin</artifactId>
        <version>11.7.2</version>
        <configuration>
          <url>jdbc:postgresql://localhost:5432/powerme_dev</url>
          <user>powerme_user</user>
          <password>dev</password>
          <locations>
            <location>classpath:db/migration</location>
            <location>classpath:db/seed</location>
          </locations>
        </configuration>
      </plugin>
      <!-- JavaDoc -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.11.3</version>
        <configuration>
          <source>21</source>
          <encoding>UTF-8</encoding>
          <!-- Arrête le build si la Javadoc contient des erreurs -->
          <failOnError>true</failOnError>
          <!-- Désactive seulement le warning “missing comment” -->
          <additionalOptions>
            <additionalOption>-Xdoclint:all,-missing</additionalOption>
          </additionalOptions>
          <!-- Génère un site Javadoc dans target/site/apidocs -->
          <outputDirectory>${project.build.directory}/site/apidocs</outputDirectory>
        </configuration>
        <!-- Exécuter la génération à chaque build (ou uniquement sur 'site') -->
        <executions>
          <execution>
            <id>attach-javadoc</id>
            <goals>
              <goal>javadoc</goal>      <!-- génère le site HTML -->
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Surefire (tests unitaires): nécessaire pour pouvoir les skip en IT -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <skipTests>${skipUTs}</skipTests>
        </configuration>
      </plugin>
      <!-- Failsafe (tests intégration) -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <!-- Inclut seulement les tests d'intégration -->
          <includes>
            <include>**/*IT.java</include>
            <include>**/*IntegrationTest.java</include>
          </includes>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- JaCoCo (couverture de code) -->
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.11</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal> <!-- l'agent génère un fichier target/jacoco.exec -->
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>verify</phase>
            <goals>
              <goal>report</goal> <!-- produit un rapport ds target/site/jacoco/jacoco.xml -->
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.sonarsource.scanner.maven</groupId>
        <artifactId>sonar-maven-plugin</artifactId>
        <version>5.5.0.6356</version>
    </plugin>
    </plugins>
  </build>

</project>
